--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"no test specified\" && exit 0"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "html-pdf": "^2.2.0",
+    "moment": "^2.24.0",
     "mustache": "^3.0.1",
     "object-assign": "^4.1.1"
   }
