--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "fs": "0.0.1-security",
     "html-pdf": "^2.2.0",
     "moment": "^2.24.0",
-    "mustache": "^3.0.1",
-    "object-assign": "^4.1.1"
+    "mustache": "^3.0.1"
   }
 }
