--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "fs": "0.0.1-security",
-    "html-pdf": "^2.2.0",
+    "html-pdf-chrome": "^0.5.0",
     "moment": "^2.24.0",
     "mustache": "^3.0.1"
   }
